V1.41 - Fixed left section spacing

--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@
 }
 
 .fb-logo {
-
+    padding: 15px 0 0 15px
 }
 
 .fb-logo > img {
@@ -38,10 +38,11 @@
     width: 301px;
 }
 
-.fb-desc {
-    line-height: 35px;
+.fb-desc{
+    line-height: 30px;
     color: #1c1e21;
-    display: inline-block;
+    padding-left: 45px;
+    padding-right: 45px;
 }
 
 .login {
